--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,9 +10,9 @@ html(lang="en")
         header
             h1 Noom
         main
-            form#nick
-                input(type="text", placeholder="choose a nickname", required)
-                button Save
+            //- form#nick
+            //-     input(type="text", placeholder="choose a nickname", required)
+            //-     button Save
             ul
             form#message
                 input(type="text", placeholder="write a msg", required)
